--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@ kotlin.code.style=official
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.native.ignoreDisabledTargets=true
 
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g
+
 kotlinVersion=2.2.10
 coroutinesVersion=1.10.2
 datetimeVersion=0.6.0
