--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 kotlin = "2.1.0"
 
 kotlinx-datetime = "0.6.2"
-kotlinx-serialization = "1.8.1"
+kotlinx-serialization = "1.6.3"
 coroutines = "1.9.0"
 
 binaryCompabilityValidator = "0.13.2"
@@ -17,6 +17,9 @@ kermit = "2.0.3"
 #Frameworks
 ktor = "2.3.9"
 spring-boot = "3.4.0"
+
+# Docker
+muschko = "9.4.0"
 
 #Testing
 testcontainers = "1.19.7"
@@ -80,3 +83,6 @@ kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", vers
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
 spring-dependencies = { id = "io.spring.dependency-management", version = "1.1.7" }
 spring-kotlin = { id = "org.jetbrains.kotlin.plugin.spring", version.ref = "kotlin" }
+
+# Docker
+muschko-remote = { id = "com.bmuschko.docker-remote-api", version.ref = "muschko" }
