--- a/specs/specs-task-v2.yaml
+++ b/specs/specs-task-v2.yaml
@@ -7,7 +7,7 @@ info:
     url: https://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
 servers:
-  - url: http://localhost:8080/v1
+  - url: http://localhost:8080/v2
 tags:
   - name: task
     description: Задачи
@@ -217,7 +217,7 @@ components:
       description: Категория задачи
       enum:
         - hi
-        - middle
+        - medium
         - low
         - personal
 
@@ -313,6 +313,8 @@ components:
           $ref: '#/components/schemas/UserId'
         status:
           $ref: '#/components/schemas/Status'
+        category:
+          $ref: '#/components/schemas/Category'
         deadline:
           $ref: '#/components/schemas/Deadline'
         dtCreate:
