--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,13 +21,17 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     #    runs-on: macos-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
       - uses: actions/checkout@v4
-      #        with:
-      #          submodules: recursive
-      #          token: ${{ secrets.PAT_TOKEN }}
+        with:
+          submodules: recursive
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Restore cached Primes
         id: cache-primes-restore
@@ -44,37 +48,22 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      #   - name: Validate Gradle wrapper
-      #   uses: gradle/wrapper-validation-action@v1
-
-      #      # https://github.com/actions/runner-images/issues/675
-      #      - name: Hack sources.list
-      #        run: sudo sed -i 's|http://azure.archive.ubuntu.com/ubuntu/|http://mirror.arizona.edu/ubuntu/|g' /etc/apt/sources.list
-      #
-      #      - name: Install curl-dev
-      #        run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev libpq-dev libpq5
-
-      #- name: Run Tests
-      #  uses: gradle/gradle-build-action@v2
-      #  with:
-      #    gradle-version: 8.14.1
-      #    arguments: buildInfra --info
-      #        - name: Run Tests
-      #          uses: gradle/gradle-build-action@v2
-      #          with:
-      #            gradle-version: 8.14.1
-      #            arguments: buildImages --info
-      #- name: Run Tests
-      #  uses: gradle/gradle-build-action@v2
-      #  with:
-      #    gradle-version: 8.14.1
-      #    arguments: e2eTests --info
-
       - name: Run Tests
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 8.14.1
-          arguments: check -i
+          arguments: buildMigrations --info
+      - name: Run Tests
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.14.1
+          arguments: buildImages --info
+      - name: Run Tests
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.14.1
+          arguments: e2eTests --info
+
 
       - name: Save Primes
         id: cache-primes-save
