--- a/specs/specs-task-v2.yaml
+++ b/specs/specs-task-v2.yaml
@@ -195,6 +195,8 @@ components:
       type: object
       description: Объект описывает свойства, одинаковые для create и update
       properties:
+        userId:
+          $ref: '#/components/schemas/UserId'
         title:
           type: string
           description: Заголовок задачи
