Add e2e test for postgres

--- a/study-project/study-project-app-spring/src/main/resources/application.yml
+++ b/study-project/study-project-app-spring/src/main/resources/application.yml
@@ -5,10 +5,13 @@ management:
   endpoint:
     env:
       enabled: true
+    health:
+      enabled: true
+      show-details: always
   endpoints:
     web:
       exposure:
-        include: info,env
+        include: info,env, health
 
 spring:
   jackson:
